# GHC_packages

./: .gitattributes  .gitignore  README.md  debian2dsc.sh  dht.cabal  make-all.hs  mass-build.sh  mass-upload.sh  order-sources.pl  tag.pl  upgrade.sh  upload.sh  what-to-build.pl  what-to-upgrade.pl
p/aeson-extra-0.2.2.0/debian/: changelog  control  copyright  rules
p/agda/debian/: changelog  control  copyright  elpa-agda2-mode.elpa  libghc-agda-dev.install  rules  watch
p/alex/debian/: alex.1.in  alex.install  alex.manpages  changelog  control  copyright  get_version.hs  rules  watch
p/allure/debian/: allure.desktop  allure.install  changelog  control  copyright  rules  watch
p/arbtt/debian/: arbtt.doc-base  arbtt.lintian-overrides  changelog  control  copyright  docs  examples  rules  watch
p/bluetile/debian/: bluetile-session.desktop  bluetile.desktop  bluetile.manpages  bluetile.wm  changelog  control  copyright  rules  watch
p/bnfc/debian/: changelog  control  copyright  rules  watch
p/bustle/debian/: bustle-pcap.install  bustle-pcap.manpages  bustle.install  changelog  control  copyright  install  rules  watch
p/c2hs/debian/: c2hs-doc.doc-base  c2hs-doc.docs  c2hs.install  changelog  control  copyright  rules  watch
p/cabal-debian/debian/: changelog  control  copyright  rules  watch
p/carettah/debian/: changelog  control  copyright  rules  watch
p/cpphs/debian/: changelog  clean  control  copyright  cpphs.install  rules  watch
p/darcs-monitor/debian/: changelog  control  copyright  install  install.in  librules-manual.txt  (+4 more)
src/: make-all.hs
(+9534 files in other folders)
