name:                dht
version:             0.1
synopsis:            Debian Haskell Tools
description:
  A set of tools, implemented in Haskell, and used by the Debian Haskell Team.
license:             MIT
-- license-file:        LICENSE
author:              Joachim Breitner
maintainer:          nomeata@debian.org
copyright:           2015 Joachim Breitner
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

executable make-all
  main-is:             make-all.hs
  build-depends:
    base >=4.6 && <4.8,
    containers,
    parsec,
    shake == 0.15.*,
    extra >= 1.1,
    debian == 3.87.*,
    optparse-applicative == 0.11.*,
    split == 0.2.*
  hs-source-dirs:      src
  default-language:    Haskell2010
